--- a/templates/main.html
+++ b/templates/main.html
@@ -25,7 +25,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="team-area col-12 d-flex justify-content-center">
+        <div class="card-columns team-area">
           {{ team }}
         </div>
       </div>
